removing the ompijavabinding.jar and getting it from the mpi compilation. removing the options added in #581 temporarily because they don't work on java 8